# memsense_imu

./: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cfg/: DynParams.cfg  IMUDynParams.cfg
launch/: nimu.launch  nimu_nodelet.launch  nimu_nodelet_manager.launch
msg/: ImuMAG.msg
nodelet/: imu_nodelet.xml  nodelet_plugins.xml
src/IDC/: AutoConfig.cpp  AutoConfig.h  CMakeLists.txt  GlobalVars.cpp  GlobalVars.h  GlobalVarsInternal.cpp  GlobalVarsInternal.h  IDCConfig.h  IDCUtils.cpp  IDCUtils.h  IMUMsgsCommon.cpp  IMUMsgsCommon.h  IMenuHook.h  IOHelpers.h  IOHelpersImpl.h  MenuHelper.cpp  MenuHelper.h  MenuHelperInternal.cpp  MenuHelperInternal.h  main.cpp
src/IMUDataUtils/: CMakeLists.txt  CommonUtils.cpp  CommonUtils.h  DeviceParams.cpp  DeviceParams.h  IComm.h  IIMUHeader.h  IIMUPayload.cpp  IIMUPayload.h  IIMUSample.h  IMUCounterUtils.cpp  IMUCounterUtils.h  IMUHiGPayload.cpp  IMUHiGPayload.h  IMUMAGPayload.cpp  IMUMAGPayload.h  IMUTempPayload.cpp  IMUTempPayload.h  IMUUnknownPayload.cpp  IMUUnknownPayload.h  ISensorDataTransform.h  SDTDefault.cpp  SDTDefault.h  SDTDefaultPre.cpp  SDTDefaultPre.h  STDIMUSample.cpp  STDIMUSample.h  SensorDataUtils.cpp  SensorDataUtils.h  SerialComm.cpp  SerialComm.h  SerialDeviceParams.cpp  SerialDeviceParams.h  StandardIMUHeader.cpp  StandardIMUHeader.h  Types.h  UnknownIMUSample.cpp  UnknownIMUSample.h
src/IMUSampler/: CMakeLists.txt  IMUSampler.cpp  IMUSampler.h
src/nodes/: CMakeLists.txt  imu_base_node.cpp  imu_base_node.h  imu_filter.cpp  imu_filter.h  imu_node.cpp  imu_node_base.cpp  imu_node_base.h  imu_nodelet.cpp  imu_sample.h
